complete deploy_shard

--- a/template/mongos.conf
+++ b/template/mongos.conf
@@ -7,7 +7,7 @@
 systemLog:
   destination: file
   logAppend: true
-  path: %%MONGOS_PATH%%
+  path: %%MONGOS_LOG_PATH%%
 
 # how the process runs
 processManagement:
