--- a/template/mongod.conf
+++ b/template/mongod.conf
@@ -20,7 +20,7 @@ storage:
 # how the process runs
 processManagement:
   fork: true  # fork and run in background
-  pidFilePath: # location of pidfile
+  pidFilePath: %%MONGOD_PID%% # location of pidfile
   timeZoneInfo: /usr/share/zoneinfo
 
 # network interfaces
@@ -28,7 +28,8 @@ net:
   port: %%MONGOD_HOST%%
   bindIp: %%MONGOD_PORT%%
 
-#security:
+security:
+  keyFile: %%MONGO_KEYFILE%%
 
 #operationProfiling:
 
