--- a/template/mongos.conf
+++ b/template/mongos.conf
@@ -12,7 +12,7 @@ systemLog:
 # how the process runs
 processManagement:
   fork: true  # fork and run in background
-  pidFilePath:   # location of pidfile
+  pidFilePath: %%MONGOS_PID%%  # location of pidfile
   timeZoneInfo: /usr/share/zoneinfo
 
 # network interfaces
