--- a/template/mongod.conf
+++ b/template/mongod.conf
@@ -25,8 +25,8 @@ processManagement:
 
 # network interfaces
 net:
-  port: %%MONGOD_HOST%%
-  bindIp: %%MONGOD_PORT%%
+  port: %%MONGOD_PORT%%
+  bindIp: %%MONGOD_HOST%%
 
 security:
   keyFile: %%MONGO_KEYFILE%%
@@ -36,7 +36,8 @@ security:
 replication:
   replSetName: %%MONGOD_REPL_NAME%%
 
-#sharding:
+sharding:
+  clusterRole: %%MONGOD_CLUSTER_ROLE%% ## configsvr|shardsvr
 
 ## Enterprise-Only Options
 
