--- a/template/mongos.conf
+++ b/template/mongos.conf
@@ -17,10 +17,11 @@ processManagement:
 
 # network interfaces
 net:
-  port: %%MONGOS_HOST%%
-  bindIp: %%MONGOS_PORT%%
+  port: %%MONGOS_PORT%%
+  bindIp: %%MONGOS_HOST%%
 
-#security:
+security:
+  keyFile: %%MONGO_KEYFILE%%
 
 #operationProfiling:
 
